# miniwm

./: CMakeLists.txt  Commands.cpp  Commands.h  Config.cpp  Config.h  HotkeyDaemon.h  HotkeyDaemon.mm  LICENSE  LayoutEngine.cpp  LayoutEngine.h  MacOSWindowBridge.h  MacOSWindowBridge.mm  README.md  Window.cpp  Window.h  main.mm
docs/superpowers/plans/: 2026-06-12-miniwm-daemon-extension.md
